--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^16.13.1",
     "react-calendar": "^3.4.0",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^7.17.0",
+    "react-modal": "^3.14.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "3.4.3"
   },
